Uploaded image for project: 'Xerces-C++'
  1. Xerces-C++
  2. XERCESC-1748

parsing registry based authorities in URI fails

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Blocker
    • Resolution: Fixed
    • 3.0.1
    • 3.1.0
    • None
    • Linux

    Description

      validating documents against schema containing registry based authorities in anyURI typed attributes fails with:

      Message: Datatype error: Type:InvalidDatatypeValueException, Message:Value '...' is NOT a valid URI

      Attachments

        1. xercesc-1748patch.txt
          1 kB
          G. Kramer
        2. anyURITest.xml
          0.5 kB
          G. Kramer
        3. anyURITest.xsd
          0.8 kB
          G. Kramer

        Issue Links

          Activity

            People

              bsk Boris Kolpackov
              gkr G. Kramer
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: