Recognize a register-based authority in URI (XERCESC-1748, XERCESC-1747).

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@881714 13f79535-47bb-0310-9956-ffa450edef68